# Mini-Robot

./: Git协作规范.md  README.md  小智机器人流程图.md  采购清单.md  采购清单.xlsx  项目架构图.tldr
Code-LG/MCP-Server-Template/: CONTRIBUTING.md  LICENSE  README.md  mcp_server_sse.py  mcp_server_stdio.py  mcp_server_streamable_http.py  pyproject.toml  requirements.txt
Notes-HLY/: .~小智服务器screen用法.md  7月14号.md  7月15日记录.md  7月16日记录.md  7月17日记录.md  7月18日记录.md  7月21-23日记录.md  7月24-25日记录.md  7月26日记录.md  7月27日记录.md  7月28日记录.md  7月29日记录.md  8月10日记录.md  8月11日记录.md  8月15日回滚工具.md  8月17日记录.md  8月1日记录.md  8月23日记录.md  8月24日记录.md  8月2日记录.md  8月31日模拟.md  8月3日记录.md  8月5日记录.md  8月8日记录.md  Untitled.md  proxy-yaml.md  readme.md  使用文档.md  回滚工具.md  实现小智细节.md  开会.md
Notes-LG/: 7月12日记录.md  7月13日记录.md  7月14日记录.md  7月15日记录.md  7月16日记录.md  7月17日~7月18日记录.md
Notes-TY/: 7月14日记录.md  7月15日记录.md  7月16日记录.md  7月17日记录.md  7月18日记录.md  7月19日记录.md  7月20日记录.md  MCP初步了解.md  MCP服务器的接入流程.md  WSL+VScode的esp环境开发.md  xiaozhi-server学习.md  分割版.txt  小智运维机器人助手流程分析.md  插件系统与MCP服务的关系.md  紧凑版.txt
