[project]
name = "mcp-server-templates"
version = "0.1.0"
description = "MCP (Model Context Protocol) 服务器模板集合，包含 STDIO、SSE、HTTP 三种传输方式的完整实现示例"
authors = [
    {name = "MCP-Server Contributors"}
]
readme = "README.md"
license = {text = "CC-BY-NC-SA-4.0"}
requires-python = ">=3.12"
keywords = ["mcp", "model-context-protocol", "fastmcp", "server", "template"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Communications",
]

[project.urls]
Homepage = "https://github.com/your-username/MCP-Server"
Documentation = "https://github.com/your-username/MCP-Server#readme"
Repository = "https://github.com/your-username/MCP-Server.git"
Issues = "https://github.com/your-username/MCP-Server/issues"
Changelog = "https://github.com/your-username/MCP-Server/blob/main/CHANGELOG.md"
dependencies = [
    "fastapi>=0.116.1",
    "mcp>=1.12.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "websockets>=15.0.1",
]

[tool.uv.workspace]
members = [
    "venv",
]
